bout ready for sunday 1st publish

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@
   font-size: 1.5em;
 }
   
+.mm-green {
+	color:rgb(35, 148, 159);
+}
+
 mm-green {
 	color:rgb(35, 148, 159);
 }
@@ -74,4 +78,25 @@ background-image:url('../img/bg.jpg');
 .content-5 ul{
 -webkit-padding-start: 0px;
 font-size: 16px;
+}
+
+.footer-10 img{
+	padding-top: 20px;
+	padding-bottom: 10px;
+}
+
+.footer-10{
+	background-color:#eee; 
+}
+
+.content-7 h3{
+	text-align: left;
+}
+
+.content-5 h6{
+	color: rgb(35, 148, 159);
+}
+
+footer a{
+	color:rgb(35, 148, 159);
 }
