--- a/ui-kit/ui-kit-header/css/style.css
+++ b/ui-kit/ui-kit-header/css/style.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Patrick+Hand+SC);
 .dropdown-arrow-inverse {
   border-bottom-color: #34495e !important;
   border-top-color: #34495e !important;
@@ -26,7 +25,7 @@ a {
   transition: 0.25s;
 }
 a:hover {
-  color: #1abc9c;
+  color: rgb(85, 183, 181);
   text-decoration: none;
 }
 h1,
