--- a/css/base.css
+++ b/css/base.css
@@ -585,7 +585,7 @@ button:active {
   padding: 0;
   width: 30px;
   height: 30px;
-  background: url("../../../common-files/icons/menu-icon.png") 50% no-repeat;
+  background: url("../common-files/icons/menu-icon.png") 50% no-repeat;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
@@ -899,7 +899,7 @@ section * {
   background-color: #138871;
 }
 .header-3 .navbar .navbar-toggle {
-  background-image: url("../../../common-files/icons/menu-icon-dark.png");
+  background-image: url("../common-files/icons/menu-icon-dark.png");
 }
 .header-3-sub {
   position: relative;
